[package]
name = "blog_os"
version = "0.1.0"
authors = ["James Holman <james.holman@domain.com.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
target = "x86_64-blog_os.json"

[dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"