[package]
name = "blog_os"
version = "0.1.0"
authors = ["James Holman <james.holman@domain.com.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.8.0"
volatile = "0.2.6"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"